   - default to showing disk space
   - fix DISTRO to BYOBU_DISTRO in template
  * debian/control: LP: #1596364
    - add |xterm to suggests
  * usr/bin/purge-old-kernels: LP: #1595977
    - modify the kernel purge algorithm slightly to better handle efi
      and virtual kernels
  * usr/bin/purge-old-kernels: LP: #1532153
    - run autoremove afterwards, to clean up anything else

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 05 Jul 2016 10:47:25 -0500

byobu (5.109-0ubuntu1) yakkety; urgency=medium

  [ Dustin Kirkland ]
  * usr/lib/byobu/include/icons, usr/lib/byobu/reboot_required,
    usr/lib/byobu/updates_available:
    - add an checkbox icon
    - fix formatting again
  * usr/share/byobu/desktop/byobu.desktop.old,
    usr/share/byobu/desktop/Makefile.am:
    - deprecated

  [ Grant Likely ]
  * usr/lib/byobu/include/select-session.py:
    - Add support for tmux grouped sessions
    - select-session.py: Pass command name in argument list

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 05 Jul 2016 10:47:22 -0500

byobu (5.108-0ubuntu1) yakkety; urgency=medium

  [ Dustin Kirkland ]
  * usr/lib/byobu/updates_available:
    - remove trailing whitespace
  * usr/lib/byobu/battery:
    - only use POWER_SUPPLY_CAPACITY if neither POWER_SUPPLY_ENERGY_NOW nor
      POWER_SUPPLY_CHARGE_NOW are available; important for summing
      multiple batteries

  [ Kevin Mark and Dustin Kirkland ]
  * usr/lib/byobu/uptime:
    - fix uptime status on MacOS

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 31 May 2016 10:03:12 -0500

byobu (5.107-0ubuntu1) yakkety; urgency=medium

  * usr/bin/manifest:
    - remove http, breaks pastebinit
  * usr/bin/manifest:
    - fix manifest url
  * usr/bin/wifi-status:
    - use tmux target pane

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 09 May 2016 18:26:20 -0500

byobu (5.106-0ubuntu1) xenial; urgency=medium

  * usr/lib/byobu/include/tmux-send-command-to-all-panes:
    - fix breakage on sending command to all panes
